# Copyright 1999-2010 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
# $Header $

*magus-1.3.1 (10 Mar 2010)

  25 Jul 2010; Martin Väth <martin@mvath.de> :
  mozilla-firefox->firefox.
  USE flags: Add icecat, rename kde->konqueror, pdf->acroread.
  Let firefox take precedence.

  31 Mar 2010; Martin Väth <martin@mvath.de> :
  +magus-1.3.1.ebuild +magus-99999999.ebuild -magus-live-1.3.1-r6.ebuild:
  Rename magus-live into magus: Since now some tarball is available and the
  monotone repository is too often inaccessible, we do not install the
  live-version by default. If you want to install the live version unmask
  the magus-99999999 ebuild with
  echo 'games-rpg/magus **' >>/etc/portage/package.keywords
  Note that you can prevent the live version from fetching the monotone
  repository by setting ESCM_OFFLINE=1 or EMTN_OFFLINE=1 (temporarily in the
  environment or permanently in /etc/make.conf); the former will influence all
  live ebuilds, the latter only those which use monotone (currently only magus)

*magus-live-1.3.1 (03 May 2010)

  10 Mar 2010; Martin Väth <martin@mvath.de> :
  magus-live-1.3.1-r6.ebuild: Fix monotone dependency.

  08 Jan 2010; Martin Väth <martin@mvath.de> :
  magus-live-1.3.1-r6.ebuild: Fix postgresql dependency.

  04 Jan 2010; Martin Väth <martin@mvath.de> :
  magus-live-1.3.1-r6.ebuild: Select latest head.
  Remove useless static libs and .la files by default;
  can be overridden by EXTRA_ECONF=--enable-static

  03 Jan 2010; Martin Väth <martin@mvath.de> :
  magus-live-1.3.1-r5.ebuild: Select Christoph's head.

  10 May 2009; Martin Väth <martin@mvath.de> :
  magus-live-1.3.1-r4.ebuild: Support gcc-4.4

  03 May 2009; Martin Väth <martin@mvath.de> :
  magus-live-1.3.1-r3.ebuild: Switch to EAPI=2

  03 Dec 2008; Martin Väth <martin@mvath.de> :
  Useflag seamonkey. Put inherit at begin.
  Patch build system to work with --as-needed.

  20 Sep 2008; Martin Väth <martin@mvath.de> :