@@ -1,5 +1,5 @@
 DIST magus-1.3.1.tar.bz2 7358580 RMD160 2a99db268e2d8802b948b1c88c57c53cfb1a5daf SHA1 36b7e33c37ece6482bb141b564c66dc83f6087c9 SHA256 f7f118dff53b53a45d612d870bc2c9fb151d9c3aeea6f006b74fc6ab41dcb4d6
-EBUILD magus-1.3.1.ebuild 4806 RMD160 023f47ae4b8779249270c1390df9131406c954be SHA1 c7b36d8e2af370e456e02bc83dcaeab058b700f1 SHA256 a5c47c657e2bebb9d5c720dbe0b8b7a4bbe7ee52af186e8bfec87153debc983f
-EBUILD magus-99999999.ebuild 4806 RMD160 023f47ae4b8779249270c1390df9131406c954be SHA1 c7b36d8e2af370e456e02bc83dcaeab058b700f1 SHA256 a5c47c657e2bebb9d5c720dbe0b8b7a4bbe7ee52af186e8bfec87153debc983f
-MISC ChangeLog 3399 RMD160 9d3eec1a98fbe92a07d2b0f73c89e817b8360c6e SHA1 c6631f8afe73491fbab8fbdf70f4d0667292b85a SHA256 6668410211f8dd4e41b1a5e794222103bd8af21226ce8fae13206e1a37042bca
+EBUILD magus-1.3.1.ebuild 4839 RMD160 61c0a375cfcd40809603c12cedf9e58d649597ba SHA1 31ac232a73d401e27c8bdf66a09ff10517a6652a SHA256 4a5676e6990fc48fcf0d9023486c5d9bfe858a4edc8cb18a666a13a0d7075b00
+EBUILD magus-99999999.ebuild 4839 RMD160 61c0a375cfcd40809603c12cedf9e58d649597ba SHA1 31ac232a73d401e27c8bdf66a09ff10517a6652a SHA256 4a5676e6990fc48fcf0d9023486c5d9bfe858a4edc8cb18a666a13a0d7075b00
+MISC ChangeLog 3442 RMD160 04da0616079d655073acb51e9ff0e747bbb75aba SHA1 62ce86affbdf059d534b8fa14280d9c9bc32a950 SHA256 0e6902326b0b048e76e571eb9057b5fc2af50616bcbe99a46e73fb1f635a8471
 MISC metadata.xml 764 RMD160 1ad76763bf7957a7670d2687db95aee30cc31d3a SHA1 d88e606be5c43297666ed67cdd9a50bee3cc5ae7 SHA256 abda9737ebb13a3ee0438f2ab02f00623298c2a5c85d143199c7c1b5c80bb797
